objects/Lead_Match__c.object
<CustomObject>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <label>Match Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Match</relationshipLabel>
        <relationshipName>Lead_Match</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Match</label>
    <nameField>
        <label>Lead Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Match</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>